Squashed commit of the following:
commit 953404e2505e271fb5ca892c3ddd4bc167f2e7f8
Author: Casimir Eisenach <casimirusenormus@hotmail.de>
Date:   Sat Sep 27 00:17:48 2025 +0200

    Fix #926

commit 64bb77ea9f569eb4acb16f616fca69821ad96b3a
Author: alexxyo <92116740+alexxyo3@users.noreply.github.com>
Date:   Fri Sep 26 04:41:20 2025 +0200

    Update to the italian localization (#988)

commit ddd22eec21b17dc31a28cd5a362ca778ed10e2bd
Author: HONE13 <54649543+HONE13@users.noreply.github.com>
Date:   Thu Sep 25 12:49:00 2025 +0800

    Update zh_CN.lua (#857)

commit 7498e6fd36f8f4220fdd859c21cc237b9acb9f13
Author: english5040 <ejwu@andrew.cmu.edu>
Date:   Sun Sep 21 05:27:50 2025 -0400

    version

commit 299c9a7045b5691cae1e154284c2b0c74c56129a
Author: english5040 <ejwu@andrew.cmu.edu>
Date:   Sun Sep 21 05:27:26 2025 -0400

    Need nil check

    turns out card.area == G.pack_cards can be true if both are nil

commit 4acc0eb99f5afc8163fa861512e25691f23ea246
Author: english5040 <ejwu@andrew.cmu.edu>
Date:   Sun Sep 21 02:44:23 2025 -0400

    smart_level_up_hand now still passes amount if it's a table

    This caused a problem with Talisman. Even w/o Talisman, passing `amount` will not crash if `amount` is a table with an __add metamethod, this should be allowed

commit 97ea9e7c120fbc99f70e5ec30578057c161f50e5
Author: Eremel <richardbailey@outlook.com>
Date:   Sat Sep 20 14:02:50 2025 +0100

    Cards in booster packs now check for `select_card` on the card itself before the pack in all circumstances, addresses #967

commit abc23e6904b6c892eeadb4b507ca92f04178599c
Author: Eremel <richardbailey@outlook.com>
Date:   Sat Sep 20 13:28:56 2025 +0100

    Stop packs that save consumables from hiding future choices momentarily, fixes #974

commit c65e451711c749b59a3e34a10456c75c7ca7bf2c
Author: Eremel <richardbailey@outlook.com>
Date:   Sat Sep 20 13:16:02 2025 +0100

    Added `SMODS.poll_edition` wrapper function

commit 2d19eedeb3d106a273c26db713ba5a8a0af2a5ba
Author: E

--- a/lovely/atlas.toml
+++ b/lovely/atlas.toml
@@ -53,6 +53,13 @@ target = 'card.lua'
 pattern = '''self.T.scale = 0.95'''
 position = 'after'
 match_indent = true
+payload = '''self.original_T.scale = 0.95'''
+[[patches]]
+[patches.pattern]
+target = 'card.lua'
+pattern = '''self:set_ability(center, true)'''
+position = 'before'
+match_indent = true
 payload = '''self.original_T = copy_table(self.T)'''
 [[patches]]
 [patches.pattern]
@@ -63,7 +70,9 @@ pattern = '''
 local X, Y, W, H = self.T.x, self.T.y, self.T.w, self.T.h
 '''
 payload = '''
-for key, _ in pairs(self.T) do
-    self.T[key] = self.original_T[key]
+if delay_sprites ~= 'quantum' then
+    for key, _ in pairs(self.T) do
+        self.T[key] = self.original_T[key]
+    end
 end
 '''
