--- a/lovely/calculate_card_added.toml
+++ b/lovely/calculate_card_added.toml
@@ -5,11 +5,14 @@ priority = -5
 
 # Add card_added context
 [[patches]]
-[patches.pattern]
+[patches.regex]
 target = "card.lua"
-pattern = '''*then G.E_MANAGER:add_event(Event({ func = function() G.GAME.blind:set_blind(nil, true, nil); return true end })) end'''
+pattern = '''
+(?<indent>[\t ]*).*then G\.E_MANAGER:add_event\(Event\(\{ func = function\(\) G\.GAME\.blind:set_blind\(nil, true, nil\); return true end \}\)\) end
+(?<root>)[\s\S]*
+function Card:remove_from_deck'''
 position = "after"
-match_indent = true
+line_prepend = "$indent"
 payload = '''
 if not from_debuff and G.hand then
     local is_playing_card = self.ability.set == 'Default' or self.ability.set == 'Enhanced'
@@ -22,4 +25,5 @@ if not from_debuff and G.hand then
     end
 end
 '''
+root_capture = '$root'
 times = 1 
